[package]
name = "ergo-consensus"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ergo-types = { path = "../ergo-types" }
ergo-wire = { path = "../ergo-wire" }
blake2 = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
ergo-lib = { version = "0.28", default-features = false, features = ["std"] }
sigma-ser = "0.19"

[dev-dependencies]
base16 = "0.2"
ergo-types = { path = "../ergo-types", features = ["test-utils"] }
