[package]
name = "ergo-indexer"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ergo-types = { path = "../ergo-types" }
ergo-wire = { path = "../ergo-wire" }
ergo-storage = { path = "../ergo-storage" }
blake2 = { workspace = true }
rocksdb = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
