[package]
name = "ergo-network"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ergo-types = { path = "../ergo-types" }
ergo-wire = { path = "../ergo-wire" }
ergo-settings = { path = "../ergo-settings" }
ergo-consensus = { path = "../ergo-consensus" }
ergo-storage = { path = "../ergo-storage" }
ergo-state = { path = "../ergo-state" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
lru = { workspace = true }
hex = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake2 = { workspace = true }

[dev-dependencies]
ergo-types = { path = "../ergo-types", features = ["test-utils"] }
tempfile = { workspace = true }
