[package]
name = "ergo-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
wallet = ["ergo-wallet"]

[dependencies]
ergo-types = { path = "../ergo-types" }
ergo-settings = { path = "../ergo-settings" }
ergo-storage = { path = "../ergo-storage" }
ergo-network = { path = "../ergo-network" }
ergo-consensus = { path = "../ergo-consensus" }
ergo-state = { path = "../ergo-state" }
ergo-wire = { path = "../ergo-wire" }
ergo-indexer = { path = "../ergo-indexer" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1", features = ["arbitrary_precision"] }
hex = { workspace = true }
blake2 = { workspace = true }
rocksdb = { workspace = true }
thiserror = { workspace = true }
num-bigint = { workspace = true }
rand = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
ergo-wallet = { path = "../ergo-wallet", optional = true }
ergo-lib = { version = "0.28", default-features = false, features = ["std", "compiler"] }

[dev-dependencies]
tempfile = { workspace = true }
tower = { version = "0.5", features = ["util"] }
ergo-types = { path = "../ergo-types", features = ["test-utils"] }
