[package]
name = "ergo-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ergo-types = { path = "../ergo-types" }
ergo-wire = { path = "../ergo-wire" }
ergo-consensus = { path = "../ergo-consensus" }
blake2 = { workspace = true }
thiserror = { workspace = true }
rocksdb = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ergo-types = { path = "../ergo-types", features = ["test-utils"] }
num-bigint = { workspace = true }
tempfile = { workspace = true }
