[package]
name = "ergo-wallet"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ergo-chain-types = "0.15"
ergo-consensus = { path = "../ergo-consensus" }
ergo-lib = { version = "0.28", default-features = false, features = ["std", "mnemonic_gen"] }
ergo-types = { path = "../ergo-types" }
ergo-wire = { path = "../ergo-wire" }
ergotree-ir = "0.28"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
rocksdb = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
